--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,8 +10,8 @@ $turquoise: #44ddd0;
 $green: #27d7a1;
 $light-green: #45f69e;
 $dark-green: rgb(0, 100, 80);
-$blue: #2146ec;
-$blue-hover: #2168ec;
+$blue:#3273dc;
+$blue-hover: #2965c5;
 
 $light: #f8f8f8;
 
