--- a/frontend/src/home/Home.scss
+++ b/frontend/src/home/Home.scss
@@ -1,10 +1,10 @@
 .tinted-image {
     background: #242424;
-    // background:
-    //     linear-gradient(rgba(17, 7, 151, 0.65),
-    //         rgba(17, 7, 151, 1.00)),
-    //     url(../../images/home-background3.jpg);
-    // background-size: cover;
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.1),
+            rgb(0, 0, 0)),
+        url(../images/bg2.jpg);
+    background-size: cover;
 }
 
 .task-manager-container {
