--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -62,8 +62,10 @@ body,
   width: 100%;
   max-width: 580px;
   background: white;
-  border-radius: 5px;
   padding: 35px;
+  border-radius: 6px;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  color: #4a4a4a;
 }
 
 .title {
