--- a/frontend/src/task/pages/Dashboard.scss
+++ b/frontend/src/task/pages/Dashboard.scss
@@ -1,16 +1,26 @@
 @import '../../index.scss';
 
-.task-manager-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    max-width: 1000px;
-    max-height: 650px;
 
-    .tasks-list-container {
-        background: #e9f2f9;
+.dashboard-content {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    display: flex;
+    justify-content: center;
+
+    .task-manager-container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        max-width: 1000px;
+        min-height: 650px;
+
+        .tasks-list-container {
+            background: #e9f2f9;
+        }
     }
 }
+
+
 
 .sidebar {
     display: flex;
