added about, stats, summary, video

--- a/frontend/src/home/Home.scss
+++ b/frontend/src/home/Home.scss
@@ -3,7 +3,7 @@
     background:
         linear-gradient(rgba(0, 0, 0, 0.1),
             rgb(0, 0, 0)),
-        url(../images/bg2.jpg);
+        url(../assets/background.jpg);
     background-size: cover;
 }
 
