--- a/frontend/src/shared/Navbar.scss
+++ b/frontend/src/shared/Navbar.scss
@@ -1,50 +1,48 @@
-@import '../index.scss';
+@import "../index.scss";
 
 .centered-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .navbar {
-    box-shadow: 0px 1px 2px #0000000d;
+  box-shadow: 0px 1px 2px #0000000d;
 }
 
 .logo {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .navbar-note {
-    margin-top: auto;
-    margin-bottom: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .activeLink {
-    background-color: #fafafa !important;
-    color: $blue !important;
+  background-color: #fafafa !important;
+  color: $blue !important;
 }
 
-.dropdown-username {}
-
 .dropdown-avatar {
-    display: inline-block;
+  display: inline-block;
 
-    & img {
-        border-radius: 50%;
-    }
+  & img {
+    border-radius: 50%;
+  }
 }
 
 .dropdown-arrow {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
 .create-team-button {
-    transition: 0.1s ease-in;
-    background-color: $blue-bg;
+  transition: 0.1s ease-in;
+  background-color: $blue-bg;
 
-    &:hover {
-        background-color: $blue;
-    }
+  &:hover {
+    background-color: $blue;
+  }
 }
