--- a/frontend/src/task/pages/Dashboard.scss
+++ b/frontend/src/task/pages/Dashboard.scss
@@ -1,72 +1,70 @@
-@import '../../index.scss';
-
+@import "../../index.scss";
 
 .dashboard-content {
-    margin-top: 3em;
-    margin-bottom: 3em;
+  margin-top: 3em;
+  margin-bottom: 3em;
+  display: flex;
+  justify-content: center;
+
+  .task-manager-container {
     display: flex;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    min-height: 650px;
+    max-height: 3000px;
 
-    .task-manager-container {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        max-width: 1000px;
-        min-height: 650px;
-        max-height: 3000px;
-
-        .tasks-list-container {
-            background: #e9f2f9;
-        }
+    .tasks-list-container {
+      background: #e9f2f9;
     }
+  }
 }
 
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    background: white;
-    padding: 42px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  background: white;
+  padding: 42px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 .list-menu {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  flex-grow: 1;
+
+  .list-menu-item {
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-    flex-grow: 1;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 5px;
+    width: 100%;
+    color: #5f5f5f;
+    margin-bottom: 5px;
 
-    .list-menu-item {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        padding: 10px 15px;
-        border-radius: 5px;
-        width: 100%;
-        color: #5f5f5f;
-        margin-bottom: 5px;
-
-        &:hover {
-            background: $light;
-        }
-
-        &.active {
-            border: 1px solid rgb(237, 240, 245);
-        }
-
+    &:hover {
+      background: $light;
     }
+
+    &.active {
+      border: 1px solid rgb(237, 240, 245);
+    }
+  }
 }
 
 .list-settings-icon {
-    background: $grey-lighter;
-    padding: 15px;
-    border-radius: 30px;
-    cursor: pointer;
+  background: $grey-lighter;
+  padding: 15px;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 .add-task-btn {
-    background: #363636 !important;
-    color: #ffffff !important;
-    border: none !important;
+  background: #363636 !important;
+  color: #ffffff !important;
+  border: none !important;
 }
